--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "server",
+  "name": "auth-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Authenticated API Server",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "lint": "eslint **/*.js",
     "watch": "nodemon index.js",
-    "test-watch": "jest --watchAll",
-    "test": "jest"
+    "test": "jest --coverage",
+    "test-watch": "jest --watchAll --coverage"
   },
   "jest": {
     "testEnvironment": "node"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Jeremy Penning",
+  "license": "MIT",
   "dependencies": {
     "@code-fellows/supergoose": "^1.0.11",
     "base-64": "^1.0.0",
@@ -25,6 +26,9 @@
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "eslint": "^7.15.0",
+    "method-override": "^3.0.0",
+    "supertest": "^6.0.1"
   }
 }
